force-app/main/default/objects/NaturalLanguageFormComponent__mdt/NaturalLanguageFormComponent__mdt.object-meta.xml
<CustomObject>
    <label>Natural Language Form Component</label>
    <pluralLabel>Natural Language Form Components</pluralLabel>
</CustomObject>