force-app/main/default/objects/NaturalLanguageFormComponent__mdt/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <label>Flow</label>
    <length>32</length>
    <type>Text</type>
</CustomField>