force-app/main/default/objects/NaturalLanguageFormComponent__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>