force-app/main/default/objects/NaturalLanguageFormComponent__mdt/fields/NaturalLanguageForm__c.field-meta.xml
<CustomField>
    <fullName>NaturalLanguageForm__c</fullName>
    <label>Natural Language Form</label>
    <referenceTo>NaturalLanguageForm__mdt</referenceTo>
    <relationshipLabel>Natural Language Form Components</relationshipLabel>
    <relationshipName>Natural_Language_Form_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>