force-app/main/default/objects/NaturalLanguageFormComponent__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Label</fullName>
                <default>true</default>
                <label>Label</label>
            </value>
            <value>
                <fullName>Input_text</fullName>
                <label>Input - text</label>
            </value>
            <value>
                <fullName>Input_date</fullName>
                <label>Input - date</label>
            </value>
            <value>
                <fullName>Input_number</fullName>
                <label>Input - number</label>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>