force-app/main/default/objects/NaturalLanguageFormComponent__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NaturalLanguageForm__c</columns>
    <columns>Sequence__c</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>Value__c</columns>
    <columns>Flow__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>